--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,12 +77,16 @@ section {
     height: 600px;
     background-size: cover;
     background-position: center;
+    position: relative;
 }
 
 .hero-form {
+    border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
     width: 500px;
     color: #024e76;
-    border: #024e76 3px solid;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
 }
