--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ section {
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
-    margin: auto;
+    margin: 0 auto;
 }
 /* End of What we do*/
 /* Start of What you do */
@@ -181,4 +181,52 @@ section {
 
 .steps span {
     font-size: 38px;
+}
+
+/* Start of trainers info */
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
 }
