--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,86 +1,95 @@
-/* using the * applies to everything */
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-/* apply styles to <body> */
-body {
-    font-family: Helvetica, Arial, sans-serif;
+  }
+  
+  body {
     color: #39a6b2;
-}
-
-/* apply styles to <header> */
-header {
+    font-family: Helvetica, Arial, sans-serif;
+  }
+  
+  
+  /* HEADER / NAV BAR STYLES START */
+  
+  header {
     padding: 20px 35px;
     background-color: #39a6b2;
-}
-/* apply style to individual header <h1> */
-header h1 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  header h1 {
     font-weight: bold;
+    margin: 0;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
-    display: inline;
-}
-/* apply style to only <a> in unorganized item list */
-header a {
+  }
+  
+  header a {
     text-decoration: none;
-    color: #fce138
-}
-/* moves <li> to the right of the screen*/
-header nav {
-    float: right;
+    color: #fce138;
+  }
+  
+  header nav {
     margin: 7px 0;
-}
-/* apply style to all <li> in <nav> */
-header nav ul li {
+  }
+  
+  header nav ul li {
     display: inline;
-}
-/* apply style to all <a> in <li> */
-header nav ul li a {
+  }
+  
+  header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
-}
-/* apply style to <footer> */
-footer {
+  }
+  
+  /* HEADER / NAVBAR STYLES END */
+  
+  
+  
+  /* FOOTER STYLES START */
+  footer {
     background: #fce138;
-    width: 100%;
     padding: 40px 35px;
-}
-/* apply style to individual footer <h2> */
-footer h2 {
+    width: 100%;
+  }
+  
+  footer h2 {
     display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
-}
-/* apply style to footer <div> */
-footer div {
+  }
+  
+  footer div {
     float: right;
     line-height: 1.5;
     text-align: right;
-}
-/* apply style to footer <a> */
-footer a {
-    color: #024e76
-}
-/* apply style to every <section> */
-section {
+  }
+  
+  footer a {
+    color: #024e76;
+  }
+  /* END FOOTER STYLES */
+  
+  /* STYLE ALL SECTION TAGS */
+  section {
     padding: 60px;
-}
-
-/* Hero Style Start */
-.hero {
-    background-image: url("../images/hero-bg.jpg");
-    height: 600px;
+  }
+  
+  /* HERO STYLES START */
+  .hero {
+    background-image: url('../images/hero-bg.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
-}
-
-.hero-form {
+    height: 600px;
+  }
+  
+  .hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
@@ -89,164 +98,162 @@ section {
     position: absolute;
     bottom: 120px;
     right: 140px;
-}
-
-.hero-form h3 {
+  }
+  
+  .hero-form h3 {
     font-size: 24px;
     margin: 0;
-}
-
-.hero-form p {
+  }
+  .hero-form p {
     margin: 5px 0 15px 0;
-}
-
-.form-input {
+  }
+  
+  .form-input {
     border: 1px solid #024e76;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
     color: #024e76;
     width: 100%;
-    margin-bottom: 15px;
-}
-
-.hero-form label {
+    margin-bottom: 15px; 
+  }
+  
+  .hero-form label {
     margin: 0 5px;
-}
-
-.hero-form button {
+  }
+  
+  .hero-form button {
     color: #fce138;
     background-color: #024e76;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
-}
-/* Hero Style End */
-/* Start of What we do*/
-.intro {
+  } 
+  /* HERO STYLES END */
+  
+  
+  /* SECTION TITLE STYLES START */
+  .section-title {
+    font-size: 55px;
+    display: inline-block;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    margin-bottom: 35px;
+    color: #024e76;
+  }
+  
+  .primary-border {
+    border-color: #fce138;
+  }
+  
+  .secondary-border {
+    border-color: #39a6b2;
+  }
+  /* SECTION TITLE STYLES END */
+  
+  /* WHAT WE DO STYLES */
+  .intro {
     text-align: center;
-}
-
-.intro p {
+  }
+  
+  .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
-    font-size: 20px;
     margin: 0 auto;
-}
-/* End of What we do*/
-/* Start of What you do */
-.steps {
+    font-size: 20px;
+  }
+  /* WHAT YOU DO STYLES END */
+  
+  
+  /* WHAT YOU DO STYLES START */
+  .steps { 
     text-align: center;
-    background: #fce138
-}
-/* End of What you do */
-/* General Groupings */
-.section-title {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
-}
-
-.primary-border {
-    border-color: #fce138;
-}
-
-.secondary-border {
-    border-color: #39a6b2;
-}
-
-.steps div {
+    background: #fce138;
+  }
+  
+  .steps div {
     margin-bottom: 80px;
-}
-
-.steps img {
+  }
+  
+  .steps img {
     width: 15%;
     margin: 10px 0;
-}
-
-.steps h3 {
+  } 
+  
+  .steps h3 {
     color: #024e76;
     font-size: 46px;
     margin-top: 10px;
-}
-
-.steps p {
+  }
+  
+  .steps span {
+    font-size: 38px;
+  }
+  
+  .steps p {
     color: #39a6b2;
     font-size: 23px;
-}
-
-.steps span {
-    font-size: 38px;
-}
-
-/* Start of trainers info */
-.trainers {
+  }
+  /* WHAT YOU DO STYLES END */
+  
+  /* MEET THE TRAINERS START */
+  .trainers {
     text-align: center;
-}
-
-.trainer {
+  }
+  
+  .trainer {
     width: 900px;
     margin: 0 auto 30px auto;
     background: #024e76;
     color: #fce138;
     overflow: auto;
-}
-
-.trainer img {
+  }
+  
+  .trainer img {
     width: 35%;
     float: left;
-}
-
-.trainer-bio {
+  }
+  
+  .trainer-bio {
     padding: 35px;
     float: left;
     width: 65%;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.trainer-bio h3 {
+  }
+  
+  .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
-}
-
-.trainer-bio h4 {
+  }
+  
+  .trainer-bio h4 {
     font-weight: lighter;
     font-size: 26px;
     margin-bottom: 25px;
-}
-
-.trainer-bio p {
+  }
+  
+  .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
-}
-
-/* Start of reach out */
-.contact {
+  }
+  /* TRAINER STYLES END */
+  
+  /* REACH OUT STYLES START */
+  .contact {
     text-align: center;
     background: #024e76;
-}
-
-.contact h2 {
+  }
+  
+  .contact h2 {
     color: #fce138;
-}
-
-.contact-info iframe {
+  }
+  
+  .contact-info iframe {
     width: 400px;
-    height: 400px;
-}
-
-.contact-info div {
+  height: 400px;
+  }
+  
+  .contact-info div {
     width: 410px;
     display: inline-block;
     vertical-align: top;
@@ -254,20 +261,32 @@ section {
     margin: 30px 0 0 60px;
     color: white;
   }
-
-.contact-info h3 {
+  
+  .contact-info h3 {
     color: #fce138;
-    font-size: 32px
-}
-
-.contact-info p, 
-.contact-info address {
+    font-size: 32px;
+  }
+  
+  .contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
     font-style: normal;
-}
-
-.contact-info a {
-    color: #fce138
-}
+  }
+  
+  .contact-info a {
+    color: #fce138;
+  }
+  
+  
+  /* REACH OUT STYLES END */
+  
+  /* UTILITIES */
+  .text-left {
+    text-align: left;
+  }
+  
+  .text-right {
+    text-align: right;
+  }
+  
