added flexbox to section titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,11 +155,12 @@
   /* SECTION TITLE STYLES START */
   .section-title {
     font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    margin-bottom: 35px;
     color: #024e76;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
   }
   
   .primary-border {
@@ -172,9 +173,7 @@
   /* SECTION TITLE STYLES END */
   
   /* WHAT WE DO STYLES */
-  .intro {
-    text-align: center;
-  }
+  
   
   .intro p {
     line-height: 1.7;
@@ -182,13 +181,13 @@
     width: 80%;
     margin: 0 auto;
     font-size: 20px;
+    text-align: center;
   }
   /* WHAT YOU DO STYLES END */
   
   
   /* WHAT YOU DO STYLES START */
   .steps { 
-    text-align: center;
     background: #fce138;
   }
   
@@ -219,7 +218,6 @@
   
   /* MEET THE TRAINERS START */
   .trainers {
-    text-align: center;
   }
   
   .trainer {
@@ -260,7 +258,6 @@
   
   /* REACH OUT STYLES START */
   .contact {
-    text-align: center;
     background: #024e76;
   }
   
@@ -308,5 +305,9 @@
   
   .text-right {
     text-align: right;
+  }
+
+  .flex-row {
+      display: flex;
   }
   
