--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,14 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url('../images/hero-bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
   }
   
   header h1 {
@@ -25,6 +33,7 @@
     margin: 0;
     font-size: 36px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   header a {
@@ -48,7 +57,16 @@
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
+
+  header nav ul li a:hover {
+      background: #fce138;
+      color: #024e76;
+      border-radius: 15px;
+      text-shadow: none;
+  }
+  
   
   /* HEADER / NAVBAR STYLES END */
   
@@ -94,6 +112,8 @@
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
   }
 
   .hero-cta {
@@ -109,6 +129,7 @@
       font-style: italic;
       font-size: 55px;
       color: #fce138;
+      text-shadow: 0 0 10px rgba(0, 0, 0, rgba(0, 0, 0, 0.5));
   }
   
   .hero-form {
@@ -118,6 +139,8 @@
     color: #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(252,225,56,.8);
+    border-radius: 15px;
   }
 
   .hero-form h3 {
@@ -136,6 +159,13 @@
     color: #024e76;
     width: 100%;
     margin-bottom: 15px; 
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);
+  }
+
+  .form-input:focus {
+      background-color: rgba(255, 255, 255, 1);
+      outline: none;
   }
   
   .hero-form label {
@@ -148,6 +178,11 @@
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+  }
+
+  .hero-form button:hover {
+      background-color: #39a6b2;
   }
   /* HERO STYLES END */
   
@@ -194,11 +229,14 @@
       margin: 50px auto;
       padding-bottom: 50px;
       width: 80%;
-      border-bottom: 1px solid #39a6b2;
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
+  }
+
+  .step:last-child {
+      border-bottom: 1px solid #39a6b2;
   }
 
   .step h3 {
@@ -329,6 +367,13 @@
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);
+  }
+
+  .contact-form input:focus, .contact-form textarea:focus {
+      background-color: rgba(255, 255, 255, 1);
+      outline: none;
   }
   
   .contact-form button {
@@ -339,6 +384,12 @@
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+  }
+
+  .contact-form button:hover {
+      color: #fce138;
+      background: #39a6b2;
   }
   
   .contact-info a {
@@ -366,6 +417,7 @@
       header {
           padding-bottom: 0;
           justify-content: center;
+          position: relative;
       }
 
       header h1 {
