--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,14 @@
     padding: 0;
   }
   
+  :root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+  } 
+
   body {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
   }
   
@@ -14,7 +20,7 @@
   
   header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -26,19 +32,20 @@
     background-position: center;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
   }
   
   header h1 {
     font-weight: bold;
     margin: 0;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
   }
   
   header nav {
@@ -61,8 +68,8 @@
   }
 
   header nav ul li a:hover {
-      background: #fce138;
-      color: #024e76;
+      background: var(--primary-color);
+      color: var(--secondary-color);
       border-radius: 15px;
       text-shadow: none;
   }
@@ -74,7 +81,7 @@
   
   /* FOOTER STYLES START */
   footer {
-    background: #fce138;
+    background: var--(primary-color);
     padding: 40px 35px;
     width: 100%;
     display: flex;
@@ -83,7 +90,7 @@
   }
   
   footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
   }
@@ -94,7 +101,7 @@
   }
   
   footer a {
-    color: #024e76;
+    color: var(--secondary-color);
   }
   /* END FOOTER STYLES */
   
@@ -128,15 +135,15 @@
   .hero-cta h2 {
       font-style: italic;
       font-size: 55px;
-      color: #fce138;
+      color: var(--primary-color);
       text-shadow: 0 0 10px rgba(0, 0, 0, rgba(0, 0, 0, 0.5));
   }
   
   .hero-form {
-    border: 3px solid #024e76;
-    background-color: #fce138;
+    border: 3px solid var(--secondary-color);
+    background-color: var(--primary-color);
     padding: 20px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 40%;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(252,225,56,.8);
@@ -152,11 +159,11 @@
   }
   
   .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px; 
     border-radius: 10px;
@@ -173,8 +180,8 @@
   }
   
   .hero-form button {
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -182,7 +189,68 @@
   }
 
   .hero-form button:hover {
-      background-color: #39a6b2;
+      background-color: var(--tertiary-color);
+  }
+
+  /* Checkboxes and Radio Buttons */
+  .checkbox-wrapper input, .radio-wrapper input {
+    opacity: 0;
+  }
+
+  .checkbox-wrapper label, .radio-wrapper label {
+    position: relative;
+    left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+  }
+
+  .checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);
+    border: 1px solid var(--secondary-color);
+    position: absolute;
+    top: -4px;
+    left: -30px;
+  }
+
+  .radio-wrapper label::before {
+    border-radius: 50%;
+  }
+
+  .radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: var(--secondary-color);
+    position: absolute;
+    left: -29px;
+    top: -3px;
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
+  }
+
+  .checkbox-wrapper label::after {
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+  }
+
+  .checkbox-wrapper input + label::after,
+  .radio-wrapper input + label::after {
+    content: none;
+  }
+
+  .checkbox-wrapper input:checked + label::after,
+  .radio-wrapper input:checked + label::after {
+    content: "";
   }
   /* HERO STYLES END */
   
@@ -191,7 +259,7 @@
   .section-title {
     font-size: 48px;
     border-bottom: 3px solid;
-    color: #024e76;
+    color: var(--secondary-color);
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
@@ -199,11 +267,11 @@
   }
   
   .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
   }
   
   .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
   }
   /* SECTION TITLE STYLES END */
   
@@ -211,7 +279,7 @@
 
   .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     margin: 0 auto;
     font-size: 20px;
@@ -222,7 +290,7 @@
   
   /* WHAT YOU DO STYLES START */
   .steps { 
-    background: #fce138;
+    background: var(--primary-color);
   }
   
   .step {
@@ -236,11 +304,11 @@
   }
 
   .step:last-child {
-      border-bottom: 1px solid #39a6b2;
+      border-bottom: 1px solid var(--tertiary-color);
   }
 
   .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
   }
@@ -266,14 +334,14 @@
   }
 
   .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
   }
 
   .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
   }
   /* WHAT YOU DO STYLES END */
   
@@ -288,8 +356,8 @@
   
   .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
   }
   
@@ -320,11 +388,11 @@
   
   /* REACH OUT STYLES START */
   .contact {
-    background: #024e76;
+    background: var(--secondary-color);
   }
   
   .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
   }
   
   .contact-info {
@@ -347,7 +415,7 @@
   }
   
   .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
   }
   
@@ -359,11 +427,11 @@
   }
   
   .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -379,8 +447,8 @@
   .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
@@ -388,12 +456,12 @@
   }
 
   .contact-form button:hover {
-      color: #fce138;
-      background: #39a6b2;
+      color: var(--primary-color);
+      background: var(--tertiary-color);
   }
   
   .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
   }
   
   /* REACH OUT STYLES END */
